# jsonrpc

./: .gitlab-ci.yml  README.md
core/: Cargo.toml  README.md
core-client/: Cargo.toml
core-client/src/: lib.rs
core-client/transports/: Cargo.toml
core-client/transports/src/: lib.rs
core-client/transports/src/transports/: duplex.rs  http.rs  ipc.rs  local.rs  mod.rs
core/examples/: async.rs  basic.rs  meta.rs  middlewares.rs  params.rs
core/src/: lib.rs
core/src/types/: response.rs
derive/: Cargo.toml
derive/examples/: generic-trait-bounds.rs  generic-trait.rs  meta-macros.rs  pubsub-macros.rs  std.rs
derive/src/: lib.rs  rpc_trait.rs  to_client.rs  to_delegate.rs
derive/tests/: client.rs  macros.rs  pubsub-macros.rs  trailing.rs
derive/tests/run-pass/: client_only.rs  client_with_generic_trait_bounds.rs  pubsub-dependency-not-required-for-vanilla-rpc.rs  pubsub-subscription-generic-type-with-deserialize.rs  pubsub-subscription-type-with-deserialize.rs  pubsub-subscription-type-without-deserialize.rs  server_only.rs
derive/tests/ui/: attr-invalid-meta-list-names.rs  attr-invalid-meta-words.rs  attr-invalid-name-values.rs  attr-missing-rpc-name.rs  attr-named-params-on-server.rs  multiple-rpc-attributes.rs  too-many-params.rs  trait-attr-named-params-on-server.rs
derive/tests/ui/pubsub/: attr-both-subscribe-and-unsubscribe.rs  attr-invalid-meta-list-names.rs  attr-invalid-meta-words.rs  attr-invalid-name-values.rs  attr-missing-subscription-name.rs  attr-neither-subscribe-or-unsubscribe.rs  missing-subscribe.rs  missing-unsubscribe.rs  mixed-subscriber-signatures.rs
http/: Cargo.toml  README.md
http/examples/: http_async.rs  http_meta.rs  http_middleware.rs  server.rs
http/src/: handler.rs  lib.rs  tests.rs
ipc/: Cargo.toml  README.md
ipc/examples/: ipc.rs
ipc/src/: lib.rs  meta.rs  server.rs
pubsub/: Cargo.toml
pubsub/examples/: pubsub.rs  pubsub_simple.rs
pubsub/more-examples/: Cargo.toml
pubsub/more-examples/examples/: pubsub_ipc.rs  pubsub_ws.rs
pubsub/src/: lib.rs
server-utils/: Cargo.toml
server-utils/src/: cors.rs  hosts.rs  lib.rs
stdio/: Cargo.toml  README.md
stdio/examples/: stdio.rs
stdio/src/: lib.rs
tcp/: Cargo.toml  README.md
tcp/examples/: tcp.rs
tcp/src/: lib.rs
test/: Cargo.toml
test/src/: lib.rs
ws/: Cargo.toml  README.md
ws/examples/: ws.rs
ws/src/: lib.rs  tests.rs
