[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Flavored Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/tetsy-jsonrpc-core-client/"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "tetsy-jsonrpc-core-client"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.1"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[features]
tls = ["tetsy-jsonrpc-client-transports/tls"]
http = ["tetsy-jsonrpc-client-transports/http"]
ws = ["tetsy-jsonrpc-client-transports/ws"]
ipc = ["tetsy-jsonrpc-client-transports/ipc"]
arbitrary_precision = ["tetsy-jsonrpc-client-transports/arbitrary_precision"]

[dependencies]
tetsy-jsonrpc-client-transports = { version = "14.2", path = "./transports", default-features = false }

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
