[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Flavored Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
documentation = "https://docs.rs/tetsy-jsonrpc-core/"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "tetsy-jsonrpc-core"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = "0.4"
futures = "~0.1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[features]
arbitrary_precision = ["serde_json/arbitrary_precision"]

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
