[package]
authors = ["Parity Technologies <admin@parity.io>"]
documentation = "https://docs.rs/tetsy-jsonrpc-derive/"
description = "Tetsy Flavored High level, typed wrapper for `tetsy-jsonrpc-core`"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
license = "MIT"
name = "tetsy-jsonrpc-derive"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "=1.0.1"
proc-macro-crate = "0.1.4"

[dev-dependencies]
tetsy-jsonrpc-core = { version = "14.2", path = "../core" }
tetsy-jsonrpc-core-client = { version = "14.2", path = "../core-client" }
tetsy-jsonrpc-pubsub = { version = "14.2", path = "../pubsub" }
tetsy-jsonrpc-tcp-server = { version = "14.2", path = "../tcp" }
futures = "~0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
trybuild = "1.0"
