[package]
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
documentation = "https://docs.rs/tetsy-jsonrpc-derive/"
description = "Tetsy High level, typed wrapper for `tetsy-jsonrpc-core`"
edition = "2018"
homepage = "https://core.tetcoin.org"
license = "MIT"
name = "tetsy-jsonrpc-derive"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "fold"] }
proc-macro2 = "1.0"
quote = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
tetsy-jsonrpc-core = { version = "15.1.0", path = "../core" }
tetsy-jsonrpc-core-client = { version = "15.1.0", path = "../core-client" }
tetsy-jsonrpc-pubsub = { version = "15.1.0", path = "../pubsub" }
tetsy-jsonrpc-tcp-server = { version = "15.1.0", path = "../tcp" }
futures = "~0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
trybuild = "1.0"
