[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Flavored Rust http server using JSONRPC 2.0."
documentation = "https://docs.rs/tetsy-jsonrpc-http-server/"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "server"]
license = "MIT"
name = "tetsy-jsonrpc-http-server"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.0"

[dependencies]
hyper = "0.12"
tetsy-jsonrpc-core = { version = "14.2", path = "../core" }
tetsy-jsonrpc-server-utils = { version = "14.2", path = "../server-utils" }
log = "0.4"
net2 = "0.2"
unicase = "2.0"
parking_lot = "0.10.0"

[dev-dependencies]
env_logger = "0.7"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
