[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Flavored IPC server for JSON-RPC"
documentation = "https://docs.rs/tetsy-jsonrpc-ipc-server/"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
license = "MIT"
name = "tetsy-jsonrpc-ipc-server"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.1"

[dependencies]
log = "0.4"
tokio-service = "0.1"
tetsy-jsonrpc-core = { version = "14.2", path = "../core" }
tetsy-jsonrpc-server-utils = { version = "14.2", path = "../server-utils" }
tetsy-tokio-ipc = "0.4"
parking_lot = "0.10.0"

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
tokio-uds = "0.2"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
