[package]
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy Publish-Subscribe extension for jsonrpc."
documentation = "https://docs.rs/tetsy-jsonrpc-pubsub/"
edition = "2018"
homepage = "https://core.tetcoin.org"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "macros"]
license = "MIT"
name = "tetsy-jsonrpc-pubsub"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"

[dependencies]
log = "0.4"
parking_lot = "0.10.0"
tetsy-jsonrpc-core = { version = "15.1.0", path = "../core" }
serde = "1.0"
rand = "0.7"

[dev-dependencies]
tetsy-jsonrpc-tcp-server = { version = "15.1.0", path = "../tcp" }
futures = { version = "0.3", features = ["compat", "thread-pool"] }
lazy_static = "1.4"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
