[package]
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy Server utils for tetsy-jsonrpc-core crate."
documentation = "https://docs.rs/tetsy-jsonrpc-server-utils/"
edition = "2018"
homepage = "https://core.tetcoin.org"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "tetsy-jsonrpc-server-utils"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"

[dependencies]
bytes = "0.4"
globset = "0.4"
tetsy-jsonrpc-core = { version = "15.1.0", path = "../core" }
lazy_static = "1.1.0"
log = "0.4"
tokio = { version = "0.1.15" }
tokio-codec = { version = "0.1" }
unicase = "2.0"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
