[package]
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy STDIN/STDOUT server for JSON-RPC"
documentation = "https://docs.rs/tetsy-jsonrpc-stdio-server/"
edition = "2018"
homepage = "https://core.tetcoin.org"
license = "MIT"
name = "tetsy-jsonrpc-stdio-server"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"

[dependencies]
futures = "0.1.23"
tetsy-jsonrpc-core = { version = "15.1.0", path = "../core" }
log = "0.4"
tokio = "0.1.7"
tokio-codec = "0.1.0"
tokio-io = "0.1.7"
tokio-stdin-stdout = "0.1.4"

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
