[package]
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy TCP/IP server for JSON-RPC"
documentation = "https://docs.rs/tetsy-jsonrpc-tcp-server/"
edition = "2018"
homepage = "https://core.tetcoin.org"
license = "MIT"
name = "tetsy-jsonrpc-tcp-server"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"

[dependencies]
log = "0.4"
parking_lot = "0.10.0"
tokio-service = "0.1"
tetsy-jsonrpc-core = { version = "15.1.0", path = "../core" }
tetsy-jsonrpc-server-utils = { version = "15.1.0", path = "../server-utils" }

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.7"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
