[package]
name = "tetsy-jsonrpc-test"
description = "Simple test framework for Tetsy JSON-RPC."
version = "14.2.1"
authors = ["Tomasz Drwięga <tomasz@parity.io>"]
license = "MIT"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
documentation = "https://docs.rs/tetsy-jsonrpc-test/"
edition = "2018"

[dependencies]
tetsy-jsonrpc-core = { version = "14.2", path = "../core" }
tetsy-jsonrpc-core-client = { version = "14.2", path = "../core-client" }
tetsy-jsonrpc-pubsub = { version = "14.2", path = "../pubsub" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[features]
arbitrary_precision = ["tetsy-jsonrpc-core-client/arbitrary_precision", "serde_json/arbitrary_precision", "tetsy-jsonrpc-core/arbitrary_precision"]

[dev-dependencies]
tetsy-jsonrpc-derive = { version = "14.2", path = "../derive" }

