[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "WebSockets server for Tetsy JSON-RPC"
documentation = "https://docs.rs/tetsy-jsonrpc-ws-server/"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
license = "MIT"
name = "tetsy-jsonrpc-ws-server"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.1"

[dependencies]
tetsy-jsonrpc-core = { version = "14.2", path = "../core" }
tetsy-jsonrpc-server-utils = { version = "14.2", path = "../server-utils" }
log = "0.4"
parking_lot = "0.10.0"
slab = "0.4"
ws = "0.9"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
