[package]
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Tetsy WebSockets server for JSON-RPC"
documentation = "https://docs.rs/tetsy-jsonrpc-ws-server/"
edition = "2018"
homepage = "https://core.tetcoin.org"
license = "MIT"
name = "tetsy-jsonrpc-ws-server"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"

[dependencies]
tetsy-jsonrpc-core = { version = "15.1.0", path = "../core" }
tetsy-jsonrpc-server-utils = { version = "15.1.0", path = "../server-utils" }
log = "0.4"
parking_lot = "0.10.0"
slab = "0.4"
tetsy-ws = "0.10"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master"}
