[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tetsy Flavored Transport agnostic JSON-RPC 2.0 client implementation."
documentation = "https://docs.rs/tetsy-jsonrpc-client-transports/"
edition = "2018"
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "tetsy-jsonrpc-client-transports"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.1"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[features]
default = ["http", "tls", "ws"]
tls = ["hyper-tls", "http"]
http = ["hyper"]
ws = [
	"websocket",
	"tokio",
]
ipc = [
	"tetsy-tokio-ipc",
	"tetsy-jsonrpc-server-utils",
	"tokio",
]
arbitrary_precision = ["serde_json/arbitrary_precision", "tetsy-jsonrpc-core/arbitrary_precision"]

[dependencies]
failure = "0.1"
futures = "0.1.26"
hyper = { version = "0.12", optional = true }
hyper-tls = { version = "0.3.2", optional = true }
tetsy-jsonrpc-core = { version = "14.2", path = "../../core" }
tetsy-jsonrpc-pubsub = { version = "14.2", path = "../../pubsub" }
tetsy-jsonrpc-server-utils = { version = "14.2", path = "../../server-utils", optional = true }
log = "0.4"
tetsy-tokio-ipc = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.1", optional = true }
websocket = { version = "0.24", optional = true }
url = "1.7"

[dev-dependencies]
assert_matches = "1.1"
tetsy-jsonrpc-http-server = { version = "14.2", path = "../../http" }
tetsy-jsonrpc-ipc-server = { version = "14.2", path = "../../ipc" }
lazy_static = "1.0"
env_logger = "0.7"
tokio = "0.1"

[badges]
travis-ci = { repository = "tetcoin/tetsy-jsonrpc", branch = "master" }
