[package]
name = "tetsy-jsonrpc-pubsub-examples"
description = "Tetsy Flavored Examples of Publish-Subscribe extension for jsonrpc."
homepage = "https://github.com/tetcoin/tetsy-jsonrpc"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "14.2.1"
authors = ["tomusdrw <tomasz@parity.io>"]
license = "MIT"

[dependencies]
tetsy-jsonrpc-core = { version = "14.2", path = "../../core" }
tetsy-jsonrpc-pubsub = { version = "14.2", path = "../" }
tetsy-jsonrpc-ws-server = { version = "14.2", path = "../../ws" }
tetsy-jsonrpc-ipc-server = { version = "14.2", path = "../../ipc" }
