[package]
name = "tetsy-jsonrpc-pubsub-examples"
description = "Tetsy Examples of Publish-Subscribe extension for jsonrpc."
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-jsonrpc"
version = "15.1.0"
authors = ["tomusdrw <tomasz@parity.io>"]
license = "MIT"

[dependencies]
tetsy-jsonrpc-core = { version = "15.1.0", path = "../../core" }
tetsy-jsonrpc-pubsub = { version = "15.1.0", path = "../" }
tetsy-jsonrpc-ws-server = { version = "15.1.0", path = "../../ws" }
tetsy-jsonrpc-ipc-server = { version = "15.1.0", path = "../../ipc" }
